Kaiken pitäisi nyt toimia.
Jippii.

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-* {margin: 0; padding: 0; border: 0;}
+* {margin: 0; padding: 0; border: 0; box-sizing: border-box; transition: all 500ms;}
 article, aside, details, figure, footer, header, main, nav, section, summary {display: block;}
 @font-face {
     font-family: "Fipps";
@@ -36,10 +36,11 @@ code {
 body {
     font-family: "Alegreya", serif;
     background-image: linear-gradient(to top left, #ffb74d, #d4e157);
-    min-height: 100vh;
+    min-height: 101vh;
     padding: 16px;
     font-size: 1.2rem;
     text-align: justify;
+    position: relative;
 }
 body > * {
     width: 640px;
@@ -47,16 +48,16 @@ body > * {
     border-width: 8px;
     border-style: solid;
     border-radius: 4px;
-    box-sizing: border-box;
     padding: 8px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.75), 0 0 8px rgba(0,0,0,0.5) inset;
+    position: relative;
 }
-body > header {background-color: #e57373; border-color: #b71c1c;}
+body > header {background-color: #e57373; border-color: #b71c1c; z-index: 1;}
 body > main {background-color: #81c784; border-color: #1b5e20;}
 body > footer {background-color: #64b5f6; border-color: #0d47a1; color: rgba(0,0,0,0.5);}
 body > header, body > footer {text-align: center;}
-body > main {}
-#nappula {
+body > main {z-index: 2;}
+#nappula, .nappula {
     width: 40%;
     border: 8px solid #4a148c;
     background: #9c27b0;
@@ -72,4 +73,38 @@ body > main {}
 #nappula:hover {
     opacity: 1;
     transform: translateY(-0.25em);
+}
+
+.nappula {
+    position: fixed;
+    width: 320px;
+    opacity: 0;
+    top: 25%;
+    left: calc((100% - 320px) / 2);
+    transition: opacity 100ms;
+}
+
+::selection {
+    color: rgba(255,255,255,0.5);
+    background: #880e4f;
+}
+
+::-moz-selection {
+    color: rgba(255,255,255,0.5);
+    background: #880e4f;
+}
+
+::-webkit-selection {
+    color: rgba(255,255,255,0.5);
+    background: #880e4f;
+}
+
+a, a:link, a:visited {
+    color: #3f51b5;
+    text-decoration: none;
+}
+
+a:hover, a:active {
+    color: #1a237e;
+    text-decoration: underline;
 }
